# gpt-streamlit-turkish-grammar-challenger

./: LICENCE  README.md  pyproject.toml  streamlit_app.py
src/gpt_streamlit_turkish_grammar_challenger/: __init__.py  anthropic_api_client.py  open_ai_api_client.py  protocols.py  turkish_grammar_challenger.py  turkish_grammar_feedback.py  turkish_grammar_feedback_provider.py  turkish_grammar_task.py  turkish_grammar_task_creator.py  types.py
